cleaned up tables

--- a/modules/client-configuration/pages/supported-features-rocky.adoc
+++ b/modules/client-configuration/pages/supported-features-rocky.adoc
@@ -22,184 +22,53 @@ The icons in this table indicate:
 [cols="1,1,1", options="header"]
 .Supported Features on {rocky} Operating Systems
 |===
+| Feature | {rocky}{nbsp}8 | {rocky}{nbsp}9
 
-| Feature
-| {rocky}{nbsp}8
-| {rocky}{nbsp}9
-
-| Client
-| {check} (plain {rocky})
-| {check} (plain {rocky})
-
-| System packages
-| {rocky} Community
-| {rocky} Community
-
-| Registration
-| {check}
-| {check}
-
-| Install packages
-| {check}
-| {check}
-
-| Apply patches
-| {check}
-| {check}
-
-| Remote commands
-| {check}
-| {check}
-
-| System package states
-| {check}
-| {check}
-
-| System custom states
-| {check}
-| {check}
-
-| Group custom states
-| {check}
-| {check}
-
-| Organization custom states
-| {check}
-| {check}
-
-| System set manager (SSM)
-| {check}
-| {check}
-
-| Product migration {star}
-| {check}
-| {check}
-
-| Basic Virtual Guest Management {star}{star}
-| {check}
-| {check}
-
-| Advanced Virtual Guest Management {star}{star}
-| {check}
-| {check}
-
-| Virtual Guest Installation (Kickstart), as Host OS
-| {cross}
-| {cross}
-
-| Virtual Guest Installation (image template), as Host OS
-| {check}
-| {check}
-
-| System deployment (PXE/Kickstart)
-| {check}
-| {check}
-
-| System redeployment (Kickstart)
-| {check}
-| {check}
-
-| Contact methods
-| {check} ZeroMQ, Salt-SSH
-| {check} ZeroMQ, Salt-SSH
-
-| Works with {productname} Proxy
-| {check}
-| {check}
-
-| Action chains
-| {check}
-| {check}
-
-| Staging (pre-download of packages)
-| {check}
-| {check}
-
-| Duplicate package reporting
-| {check}
-| {check}
-
-| CVE auditing
-| {check}
-| {check}
-
-| SCAP auditing
-| {check}
-| {check}
-
-| Package verification
-| {cross}
-| {cross}
-
-| Package locking
-| {check}
-| {check}
-
-| System locking
-| {cross}
-| {cross}
-
-| Maintenance Windows
-| {check}
-| {check}
-
-| System snapshot
-| {cross}
-| {cross}
-
-| Configuration file management
-| {check}
-| {check}
-
-| Snapshots and profiles
-| {check} Profiles supported, Sync not supported
-| {check} Profiles supported, Sync not supported
-
-| Power management
-| {check}
-| {check}
-
-| Monitoring server
-| {cross}
-| {cross}
-
-| Monitored clients
-| {check}
-| {check}
-
-| Docker buildhost
-| {cross}
-| {cross}
-
-| Build Docker image with OS
-| {cross}
-| {cross}
-
-| Kiwi buildhost
-| {cross}
-| {cross}
-
-| Build Kiwi image with OS
-| {cross}
-| {cross}
-
-| Recurring Actions
-| {check}
-| {check}
-
-| AppStreams
-| {check}
-| {check}
-
-| Yomi
-| N/A
-| N/A
-
-|===
-
+| Client | {check} (plain {rocky}) | {check} (plain {rocky})
+| System packages | {rocky} Community | {rocky} Community
+| Registration | {check} | {check}
+| Install packages | {check} | {check}
+| Apply patches | {check} | {check}
+| Remote commands | {check} | {check}
+| System package states | {check} | {check}
+| System custom states | {check} | {check}
+| Group custom states | {check} | {check}
+| Organization custom states | {check} | {check}
+| System set manager (SSM) | {check} | {check}
+| Product migration {star} | {check} | {check}
+| Basic Virtual Guest Management {star}{star} | {check} | {check}
+| Advanced Virtual Guest Management {star}{star} | {check} | {check}
+| Virtual Guest Installation (Kickstart), as Host OS | {cross} | {cross}
+| Virtual Guest Installation (image template), as Host OS | {check} | {check}
+| System deployment (PXE/Kickstart) | {check} | {check}
+| System redeployment (Kickstart) | {check} | {check}
+| Contact methods | {check} ZeroMQ, Salt-SSH | {check} ZeroMQ, Salt-SSH
+| Works with {productname} Proxy | {check} | {check}
+| Action chains | {check} | {check}
+| Staging (pre-download of packages) | {check} | {check}
+| Duplicate package reporting | {check} | {check}
+| CVE auditing | {check} | {check}
+| SCAP auditing | {check} | {check}
+| Package verification | {cross} | {cross}
+| Package locking | {check} | {check}
+| System locking | {cross} | {cross}
+| Maintenance Windows | {check} | {check}
+| System snapshot | {cross} | {cross}
+| Configuration file management | {check} | {check}
+| Snapshots and profiles | {check} Profiles supported, Sync not supported | {check} Profiles supported, Sync not supported
+| Power management | {check} | {check}
+| Monitoring server | {cross} | {cross}
+| Monitored clients | {check} | {check}
+| Docker buildhost | {cross} | {cross}
+| Build Docker image with OS | {cross} | {cross}
+| Kiwi buildhost | {cross} | {cross}
+| Build Kiwi image with OS | {cross} | {cross}
+| Recurring Actions | {check} | {check}
+| AppStreams | {check} | {check}
+| Yomi | N/A | N/A
+|=== 
 
 {star} to matching {sll}
-
 
 {star}{star} Virtual Guest Management:
 
