--- a/modules/administration/pages/troubleshooting/tshoot-hostname-rename.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-hostname-rename.adoc
@@ -57,24 +57,42 @@ mgrctl exec -ti -- spacewalk-hostname-rename <PUBLIC_IP_ADDRESS>
 +
 If the server is not using the new hostname, the script fails.
   Be aware that this script refreshes the pillar data for all {salt} clients: the time it takes to run depends on the number of registered clients.
-. *Skip this step if the clients are managed via a {productname} proxy.*
-  Re-configure the clients directly managed to make them aware of the new hostname and IP address.
-  In the {salt} client configuration file, you must specify the name of the new {salt} master ({productname} Server).
+
+
+*Skip this procedure if clients are managed via a {productname} proxy.*
+
+With the following procedure, reconfigure directly managed clients to make them aware of the new hostname and IP address.
+
+.Procedure: Reconfiguring Directly Managed Clients
+. On the every client, in the {salt} client configuration file, specify the name of the new {salt} master ({productname} Server).
   The filename is [path]``/etc/venv-salt-bundle/minion`` or, if you do not use the {salt} bundle, [path]``/etc/salt/minion``:
 +
 ----
 master: <new_hostname>
 ----
 
-. Restart the server.
-  On the container host, execute the restart command:
+. On every client, restart {salt} service.
+  Either run:
+
 +
+
 ----
-mgradm restart
+systemctl restart venv-salt-minion
 ----
 
-. To fully propagate the hostname to the {salt} client configuration apply the high state.
-  Applying the high state will update the hostname in the repository URLs.
++
+
+Or, if you do not use the {salt} bundle, run:
+
++
+
+----
+systemctl restart venv-salt-minion
+----
+
+
+Finally, to fully propagate the hostname to the {salt} client configuration apply the high state.
+Applying the high state will update the hostname in the repository URLs.
 
 
 
