--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-public-cloud-images.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-public-cloud-images.adoc
@@ -1,24 +1,36 @@
 = Obtaining the {productname} Server {payg} public cloud image on {azure}
 
-Follow these step-by-step instructions to locate the SUSE Manager {productnumber} {payg} image on {azure}.
-You can also review the latest available images for the public cloud using Pint (Public Cloud Information Tracker). 
+Follow these step-by-step instructions to locate the {productname} {productnumber} {payg} image on {azure}.
 
-See: link:https://pint.suse.com/[pint.suse.com]
-
+. Firstly, login to your Azure account, via https://portal.azure.com
++
+This makes sure that the Azure system is able to identify in which country your account get billed.
++
+It is important, as billing for {productname} {payg} is handled via the Azure Marketplace.
+As there are restrictions on which countries this listing can be billed, the account you will transact to should be the one you are logged into.
++
 There are currently two offers for {productname} {payg} on {azure}:
 
 * **{productname} {productnumber} with 24x7 Support ltd**
 * **{productname} {productnumber} with 24x7 Support llc**
++
+Pick the listing that reflects in which country your Azure account gets billed. It depends on the _sold to address_ of the account, see https://learn.microsoft.com/azure/cost-management-billing/manage/change-azure-account-profile.
++
+NOTE:: Do *not* go directly to the Azure Marketplace and get the offer. Even if the offers are visible, they should not be selected from here, as the Azure Web page is not able to identify your billing account. *Always log into the portal first*
 
-.Procedure: Obtaining the {productname} {payg} image on {azure}
-. Start by logging into your Azure account at Azure Portal.
+. After you are logged into the Azure Portal, click _Create a resource_.
 
-. Once logged in, navigate to the **Virtual Machines** section. This can be found in the dashboard or by using the search bar at the top of the Azure Portal.
+. Enter {productname} {productnumber} into the search field on the top and press kbd:[RETURN]
++
+You get a list of offerings and need to select the version of _{productname} {productnumber} with 24x7 Support_ depending on your billing country.
++
+For example, for an account billed in Germany, it would be _{productname} {productnumber} with 24x7 Support (EMEA Orders Only)_.
++
+NOTE:: the offer show up as _Azure Application_ and not as a _Virtual Machine_
 
-. Click on **Create a Virtual Machine.** Here, you will be asked to fill in details such as the subscription, resource group, and virtual machine name.
+. Click the description text to get the Product description and then on _Plans + Pricing_. If this is shown with a description and plan, you have chosen the right offer. If there is nothing shown you selected the wrong one.
 
-. During the creation of a virtual machine there is an option for **Image.** Select the correct  cloud image for your VM. 
-
-. If you don't find the image you need, you can browse the Azure Marketplace. Click on **See all images** or go to the **Marketplace** and search for the image you need. 
-
-. After selecting your image, continue with the configuration of your virtual machine. Review all settings, and then create your VM.
+. Next, click on the _Create_ button
++
+This will bring you to a form similar you may know from creating other Azure resources.
+There are two tabs you need to fill _Basic_ and _Virtual Machine Settings_
