--- a/modules/administration/pages/troubleshooting/tshoot-hostname-rename.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-hostname-rename.adoc
@@ -38,6 +38,10 @@ This is because the changes have not been made in the database, which prevents t
 If you need to change the hostname of the {productname} Server, you can do so using the [command]``spacewalk-hostname-rename`` script.
 This script updates the settings in the {postgresql} database and the internal structures of {productname}.
 
+
+
+=== Server Configuration
+
 The [command]``spacewalk-hostname-rename`` script is part of the [package]``spacewalk-utils`` package.
 
 The only mandatory parameter for the script is the newly configured IP address of the {productname} Server.
@@ -58,6 +62,9 @@ mgrctl exec -ti -- spacewalk-hostname-rename <PUBLIC_IP_ADDRESS>
 If the server is not using the new hostname, the script fails.
   Be aware that this script refreshes the pillar data for all {salt} clients: the time it takes to run depends on the number of registered clients.
 
+
+
+=== Directly Managed Clients Reconfiguration
 
 *Skip this procedure if clients are managed via a {productname} proxy.*
 
@@ -90,6 +97,9 @@ Or, if you do not use the {salt} bundle, run:
 systemctl restart venv-salt-minion
 ----
 
+
+
+=== Server Restart
 
 Finally, to fully propagate the hostname to the {salt} client configuration apply the high state.
 Applying the high state will update the hostname in the repository URLs.
