--- a/modules/administration/pages/troubleshooting/tshoot-hostname-rename.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-hostname-rename.adoc
@@ -54,11 +54,16 @@ The only mandatory parameter for the script is the newly configured IP address o
     Changing network settings is done in the same way as with renaming any other system.
 . Reboot the {productname} Server to use the new network configuration and to ensure the hostname has changed.
 . On the container host, from the command line, execute the following command to configure the public IP address of the server:
+
 +
+
+[source,shell]
 ----
 mgrctl exec -ti -- spacewalk-hostname-rename <PUBLIC_IP_ADDRESS>
 ----
+
 +
+
 If the server is not using the new hostname, the script fails.
   Be aware that this script refreshes the pillar data for all {salt} clients: the time it takes to run depends on the number of registered clients.
 
@@ -73,7 +78,9 @@ With the following procedure, reconfigure directly managed clients to make them 
 .Procedure: Reconfiguring Directly Managed Clients
 . On the every client, in the {salt} client configuration file, specify the name of the new {salt} master ({productname} Server).
   The filename is [path]``/etc/venv-salt-bundle/minion`` or, if you do not use the {salt} bundle, [path]``/etc/salt/minion``:
+
 +
+
 ----
 master: <new_hostname>
 ----
@@ -83,6 +90,7 @@ master: <new_hostname>
 
 +
 
+[source,shell]
 ----
 systemctl restart venv-salt-minion
 ----
@@ -93,15 +101,16 @@ Or, if you do not use the {salt} bundle, run:
 
 +
 
+[source,shell]
 ----
 systemctl restart venv-salt-minion
 ----
 
 
 
-=== Server Restart
+=== Client Connection with Applying High State
 
-Finally, to fully propagate the hostname to the {salt} client configuration apply the high state.
+Finally, to fully propagate the hostname to the {salt} client configuration, apply the high state.
 Applying the high state will update the hostname in the repository URLs.
 
 
@@ -119,7 +128,10 @@ If you use PXE boot through a proxy, you must check the configuration settings o
 If you use PXE boot through non-containerized {productname} Proxy 4.3, [systemitem]``tftpsync`` needs to be reconfigured.
 
 On the container host, execute:
+
+[source,shell]
 ----
 mgrctl exec -ti -- configure-tftpsync.sh
 ----
+
 ====
