Apply suggestions from code review
Co-authored-by: Ondřej Holeček <oholecek@suse.com>

--- a/modules/administration/pages/troubleshooting/tshoot-hostname-rename.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-hostname-rename.adoc
@@ -77,7 +77,7 @@ With the following procedure, reconfigure directly managed clients to make them 
 
 .Procedure: Reconfiguring Directly Managed Clients
 . On the every client, in the {salt} client configuration file, specify the name of the new {salt} master ({productname} Server).
-  The filename is [path]``/etc/venv-salt-bundle/minion`` or, if you do not use the {salt} bundle, [path]``/etc/salt/minion``:
+  The filename is [path]``/etc/venv-salt-minion/minion.d/susemanager.conf`` or, if you do not use the {salt} bundle, [path]``/etc/salt-minion/minion.d/susemanager.conf``:
 
 +
 
@@ -103,7 +103,7 @@ Or, if you do not use the {salt} bundle, run:
 
 [source,shell]
 ----
-systemctl restart venv-salt-minion
+systemctl restart salt-minion
 ----
 
 
