fix client configuration after server renaming (#3712)
* fix client configuration after server renaming
https://github.com/uyuni-project/uyuni-docs/pull/3707#discussion_r1957795325
https://github.com/SUSE/spacewalk/issues/25390
* Add subsections for clarity
Co-authored-by: Ondřej Holeček <oholecek@suse.com>

--- a/modules/administration/pages/troubleshooting/tshoot-hostname-rename.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-hostname-rename.adoc
@@ -38,6 +38,10 @@ This is because the changes have not been made in the database, which prevents t
 If you need to change the hostname of the {productname} Server, you can do so using the [command]``spacewalk-hostname-rename`` script.
 This script updates the settings in the {postgresql} database and the internal structures of {productname}.
 
+
+
+=== Server Configuration
+
 The [command]``spacewalk-hostname-rename`` script is part of the [package]``spacewalk-utils`` package.
 
 The only mandatory parameter for the script is the newly configured IP address of the {productname} Server.
@@ -50,31 +54,64 @@ The only mandatory parameter for the script is the newly configured IP address o
     Changing network settings is done in the same way as with renaming any other system.
 . Reboot the {productname} Server to use the new network configuration and to ensure the hostname has changed.
 . On the container host, from the command line, execute the following command to configure the public IP address of the server:
+
 +
+
+[source,shell]
 ----
 mgrctl exec -ti -- spacewalk-hostname-rename <PUBLIC_IP_ADDRESS>
 ----
+
 +
+
 If the server is not using the new hostname, the script fails.
   Be aware that this script refreshes the pillar data for all {salt} clients: the time it takes to run depends on the number of registered clients.
-. *Skip this step if the clients are managed via a {productname} proxy.*
-  Re-configure the clients directly managed to make them aware of the new hostname and IP address.
-  In the {salt} client configuration file, you must specify the name of the new {salt} master ({productname} Server).
-  The filename is [path]``/etc/venv-salt-bundle/minion`` or, if you do not use the {salt} bundle, [path]``/etc/salt/minion``:
+
+
+
+=== Directly Managed Clients Reconfiguration
+
+*Skip this procedure if clients are managed via a {productname} proxy.*
+
+With the following procedure, reconfigure directly managed clients to make them aware of the new hostname and IP address.
+
+.Procedure: Reconfiguring Directly Managed Clients
+. On the every client, in the {salt} client configuration file, specify the name of the new {salt} master ({productname} Server).
+  The filename is [path]``/etc/venv-salt-minion/minion.d/susemanager.conf`` or, if you do not use the {salt} bundle, [path]``/etc/salt-minion/minion.d/susemanager.conf``:
+
 +
+
 ----
 master: <new_hostname>
 ----
 
-. Restart the server.
-  On the container host, execute the restart command:
+. On every client, restart {salt} service.
+  Either run:
+
 +
+
+[source,shell]
 ----
-mgradm restart
+systemctl restart venv-salt-minion
 ----
 
-. To fully propagate the hostname to the {salt} client configuration apply the high state.
-  Applying the high state will update the hostname in the repository URLs.
++
+
+Or, if you do not use the {salt} bundle, run:
+
++
+
+[source,shell]
+----
+systemctl restart salt-minion
+----
+
+
+
+=== Client Connection with Applying High State
+
+Finally, to fully propagate the hostname to the {salt} client configuration, apply the high state.
+Applying the high state will update the hostname in the repository URLs.
 
 
 
@@ -91,7 +128,10 @@ If you use PXE boot through a proxy, you must check the configuration settings o
 If you use PXE boot through non-containerized {productname} Proxy 4.3, [systemitem]``tftpsync`` needs to be reconfigured.
 
 On the container host, execute:
+
+[source,shell]
 ----
 mgrctl exec -ti -- configure-tftpsync.sh
 ----
+
 ====
