--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-configure-the-image.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-configure-the-image.adoc
@@ -57,7 +57,7 @@ If you normally create a VM in the Azure portal, a boot diagnostics is enabled b
 
 +
 
-This is the root disk of the{productname} install which holds the OS and the {productname} Application. In addition it holds /var/cache where you need to provide storage space for each product you want to manage (see {productname} Documentation - General Requirements - Hardware Requirements).
+This is the root disk of the {productname} installation, which holds the OS and the {productname} Application. In addition it holds [path]``/var/cache`` where you need to provide storage space for each product you want to manage (see {productname} Documentation - General Requirements - Hardware Requirements).
 The proposed default of 100GB should be accepted.
 
 .. Database Disk Size
