--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-configure-the-image.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-configure-the-image.adoc
@@ -124,7 +124,7 @@ If you do not use the public IP, you need to make sure that your setup can resol
 
 .. Virtual Network / Subnet
 
-You see a default proposal for a virtual network where SUSE Manager will reside. By click _edit_ you can also change it to your needs.
+You see a default proposal for a virtual network where {productname} will reside. By click _edit_ you can also change it to your needs.
 
 +
 
