--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-requirements.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-requirements.adoc
@@ -2,7 +2,7 @@
 The {productname} {payg} offering in Azure need to communicate with the Azure Billing API, therefore it is not a simple virtual machine (VM) offering.
 
 Azure has created the Managed Application offering for this use case.
-For more informatioon, see https://learn.microsoft.com/en-us/azure/azure-resource-manager/managed-applications/overview.
+For more information, see https://learn.microsoft.com/en-us/azure/azure-resource-manager/managed-applications/overview.
 
 .Architecture Diagram of a managed application
 image::AzureManagedApp.svg[architecture of a managed application, 60%]
