--- a/modules/installation-and-upgrade/pages/install-proxy.adoc
+++ b/modules/installation-and-upgrade/pages/install-proxy.adoc
@@ -4,4 +4,4 @@
 // **This file is needed to link generically to proxy installation**
 
 There are various scenarios to deploy a {productname} Proxy.
-All these scenarios presumes you have already successfully deployed a {productname} {productnumber} Server.
+All these scenarios presume you have already successfully deployed a {productname} {productnumber} Server.
