fix cache_dir documentation (per feedback)

--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -199,6 +199,9 @@ For more information about managing a large number of clients, see xref:speciali
 | Minimum 150 GB
 
 |===
+//        ^^^
+// CHECK  ^^^ or shall we change this back to 100 GB?
+// //////////////////////////////////////////////////
 
 // /srv-www
 // * Storage requirments should be calculated for the number of ISO distribution images, containers, and bootstrap repositories you will use.
@@ -219,8 +222,9 @@ As a result of this behavior:
 
 [NOTE]
 ====
-In general, {suse} recommends to adjust the value for the cache directory to about 60 % of available free space.
-Users can set the [option]``cache_dir`` option in the [path]``squid.conf`` manually.
+In general, {suse} recommends to adjust the value for the cache directory to about 80 % of available free space.
+The [option]``cache_dir`` value is set when generating proxy configuration on the server.
+You cannot set option directly in [path]``squid.conf``.
 
 For more information, see xref:specialized-guides:large-deployments/tuning.adoc#tune_proxy[].
 ====
