SLES 15 SP6 as container host https://github.com/SUSE/spacewalk/issues/26395 https://github.com/SUSE/spacewalk/issues/26389 (EPIC)

--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -27,7 +27,7 @@ For {productname} {smr} hardware requirements, see xref:retail:retail-requiremen
 [[server-hardware-requirements]]
 == Server Requirements
 
-{sle-micro} {microversion} is ths operation system of the container host and requires as free disk space:
+{sle-micro} {microversion} or {sles} {sles-version} {sp-version} is the operation system of the container host and requires as free disk space:
 
 * Minimum for base installation 100 GB
 * Plus a minimum of 130 GB for repository data
