several fixes: typos, sl-micro and microversion macro, remove uyunicontent from mlm only files, etc.

--- a/modules/installation-and-upgrade/pages/general-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/general-requirements.adoc
@@ -1,5 +1,8 @@
 [[installation-general-requirements]]
 = General Requirements
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 
 Before you begin installation, ensure that you have:
 
