--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -27,7 +27,8 @@ For {productname} {smr} hardware requirements, see xref:retail:retail-requiremen
 [[server-hardware-requirements]]
 == Server Requirements
 
-{sle-micro} {microversion} or {sles} {sles-version} {sp-version} is the operation system of the container host and requires as free disk space:
+One of {sle-micro} {microversion} or {sles} {sles-version} {sp-version} is the operating system of the container host.
+The container host with {sle-micro} as operating system requires as free disk space:
 
 * Minimum for base installation 100 GB
 * Plus a minimum of 130 GB for repository data
