--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -22,7 +22,7 @@ For {productname} {smr} hardware requirements, see xref:retail:retail-requiremen
 [[server-hardware-requirements]]
 == Server Requirements
 
-{sl-micro} {microversion} is the operation system of the container host and requires as free disk space:
+{sl-micro} {microversion} is the operating system of the container host and requires as free disk space:
 
 * Minimum for base installation 100 GB
 * Plus a minimum of 130 GB for repository data
