Revert "The importance of resizing the default partition before deployment (#…" (#3699)
This reverts commit 3a51477c97fb1f848d7ed8404223c5ac4e96051f.

plus comment.

--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-vm-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-vm-mlm.adoc
@@ -21,8 +21,15 @@ All tools are included in these images greatly simplifying deployment.
 
 Images for {productname} {productnumber} are available at link:https://www.suse.com/download/suse-manager/[{productname} {productnumber} VM images].
 
-[IMPORTANT]
+////
+// FIXME: For the moment, disable misleading info about raw image here.
+[NOTE]
 ====
+// For more information on preparing raw images, see:
+//
+// * link:https://documentation.suse.com/en-us/sle-micro/5.5/single-html/SLE-Micro-deployment/#sec-raw-preparation[]
+// * link:https://documentation.suse.com/en-us/sle-micro/5.5/single-html/SLE-Micro-deployment/#cha-images-procedure[]
+
 Remember to resize the default size of the partition before deploying.
 For more information on preparing raw images, see https://documentation.suse.com/sle-micro/6.1/html/Micro-deployment-raw-images-virtual-machines/index.html#deployment-preparing-configuration-device[].
 // For the 5.0 backport:
@@ -30,6 +37,7 @@ For more information on preparing raw images, see https://documentation.suse.com
 
 For additional information on the self install images, see https://documentation.suse.com/sle-micro/6.1/html/Micro-deployment-selfinstall-images/index.html
 ====
+////
 
 .Available Server Images
 [cols="3, 3", options="header"]
