--- a/modules/installation-and-upgrade/pages/pubcloud-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/pubcloud-requirements.adoc
@@ -45,8 +45,8 @@ In GCE, check the ``Allow HTTPS traffic`` box under the ``Firewall`` section.
 We recommend that the repositories and the database for {productname} are stored on separate storage devices from the root volume.
 This will help to avoid data loss and possibly increase performance.
 
-The {productname} container utilizes default storage locations. These locations should be configured prior to deployment for custom storage. 
-For more information see xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[Persistent container volumes] 
+The {productname} container utilizes default storage locations. These locations should be configured prior to deployment for custom storage.
+For more information, see xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[Persistent container volumes].
 
 [IMPORTANT]
 ====
