--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -1,10 +1,10 @@
 [[deploy-suma-server]]
-= {productname} {productnumber} Server Deployment on {sle-micro}
+= {productname} {productnumber} Server Deployment on {sle-micro} or {sles}
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
 
-This guide shows you how to install and configure a {productname} {productnumber} container on {sle-micro} {microversion}.
+This guide shows you how to install and configure a {productname} {productnumber} container on {sle-micro} {microversion} or {sles} {sles-version} {sp-version}.
 
 // Link to hardware requirements do not show them here. We list them on other pages.
 // Done within next section.
@@ -15,11 +15,15 @@ This table shows the software and hardware requirements for deploying {productna
 For the purposes of this guide your machine should have 16 GB of RAM, and at least 200 GB of disk space.
 For background information about disk space, see xref:installation-and-upgrade:hardware-requirements.adoc[].
 
+// 2025-02-20, ke: For HTML output, keep white-space (empty line with spaces
+//                 and indentation, 2x) in this table!
 [cols="1,1", options="header"]
 .Software and Hardware Requirements
 |===
 | Software and Hardware  | Recommended
-| Operating System       | {sle-micro} {microversion}
+| Operating System       | {sle-micro} {microversion} or
+                          
+                           {sles} {sles-version} {sp-version}
 | Architecture           | {x86_64}, {arm}, {s390x}, {ppc64le}
 | Processor (CPU)        | Minimum of four (4) 64-bit CPU cores
 | RAM                    | 16 GB
@@ -33,7 +37,7 @@ For background information about disk space, see xref:installation-and-upgrade:h
 .Supported operating system for the Server Container Host
 [NOTE]
 ====
-The supported operating system for the container host is {sle-micro} {microversion}.
+The supported operating system for the container host is {sle-micro} {microversion} or {sles} {sles-version} {sp-version}.
 
 Container host::
 A container host is a server equipped with a container engine like [systemitem]``Podman``, which lets it manage and deploy containers.
